--- a/home.html
+++ b/home.html
@@ -159,7 +159,7 @@ const firebaseConfig = {
           addLog(logData);
         });
       } else {
-        window.location.href = "login.html"; // Redirection si pas connecté
+        window.location.href = "index.html"; // Redirection si pas connecté
       }
     });
 
