--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ const firebaseConfig = {
             balance: 0,
             logs: []
           });
-          window.location.href = "dashboard.html";
+          window.location.href = "home.html";
         })
         .catch(error => {
           document.getElementById("error").innerText = error.message;
