--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>KenzoPay - Dashboard</title>
+  <title>KenzoPay - Tableau de bord</title>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
@@ -12,90 +12,117 @@
     * { box-sizing: border-box; margin: 0; padding: 0; }
     body {
       font-family: 'Inter', sans-serif;
-      background: linear-gradient(135deg, #e0f7fa, #f3fdf6);
+      background: #f7f9fc;
       color: #1a1a1a;
       min-height: 100vh;
     }
 
+    /* ---- HEADER ---- */
     .topbar {
-      background: linear-gradient(90deg, #2ecc71, #27ae60);
-      padding: 20px 30px;
+      background: #003087;
+      padding: 15px 40px;
       color: #fff;
-      font-weight: 700;
-      font-size: 24px;
-      letter-spacing: 1px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-    }
-
-    .container {
-      padding: 30px;
-      max-width: 800px;
-      margin: auto;
-    }
-
-    .balance {
-      background: #fff;
-      padding: 25px 20px;
-      border-radius: 16px;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.08);
-      font-size: 32px;
-      font-weight: 700;
-      text-align: center;
-      margin-bottom: 30px;
-      color: #27ae60;
-    }
-
-    .btn {
-      background: #27ae60;
-      color: #fff;
-      padding: 14px 28px;
-      border: none;
-      border-radius: 12px;
-      cursor: pointer;
-      font-size: 16px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      font-size: 18px;
       font-weight: 600;
-      transition: all 0.3s ease;
+    }
+    .topbar nav a {
+      color: #fff;
+      margin-left: 25px;
+      text-decoration: none;
+      font-weight: 500;
+    }
+    .topbar nav a:hover {
+      text-decoration: underline;
+    }
+
+    /* ---- CONTAINER ---- */
+    .container {
+      max-width: 1100px;
+      margin: 40px auto;
+      padding: 0 20px;
+      display: grid;
+      grid-template-columns: 2fr 1fr;
+      gap: 30px;
+    }
+
+    /* ---- BALANCE CARD ---- */
+    .card {
+      background: #fff;
+      border-radius: 12px;
+      padding: 20px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.06);
       margin-bottom: 20px;
     }
-    .btn:hover {
-      transform: translateY(-2px);
-      box-shadow: 0 8px 20px rgba(39, 174, 96, 0.4);
-      background: #2ecc71;
-    }
-
-    h3 {
+    .balance {
+      font-size: 32px;
+      font-weight: 700;
+      color: #003087;
       margin-bottom: 15px;
-      font-size: 20px;
-      font-weight: 600;
-      color: #333;
     }
 
+    /* ---- BUTTONS ---- */
+    .btn {
+      background: #0070ba;
+      color: #fff;
+      padding: 12px 22px;
+      border: none;
+      border-radius: 25px;
+      cursor: pointer;
+      font-size: 15px;
+      font-weight: 600;
+      transition: all 0.3s ease;
+    }
+    .btn:hover {
+      background: #00457c;
+    }
+
+    /* ---- ACTIONS ---- */
+    .actions {
+      display: flex;
+      justify-content: space-between;
+      gap: 15px;
+    }
+    .action {
+      flex: 1;
+      background: #f0f7ff;
+      border-radius: 12px;
+      padding: 20px;
+      text-align: center;
+      cursor: pointer;
+      transition: 0.2s;
+    }
+    .action:hover {
+      background: #e3f0ff;
+    }
+    .action h4 {
+      margin-top: 10px;
+      font-size: 16px;
+      font-weight: 600;
+      color: #003087;
+    }
+
+    /* ---- NOTIFICATIONS ---- */
     .logs {
       background: #fff;
       padding: 20px;
-      border-radius: 16px;
-      box-shadow: 0 6px 18px rgba(0,0,0,0.08);
-      max-height: 350px;
+      border-radius: 12px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.08);
+      max-height: 400px;
       overflow-y: auto;
     }
-
     .log {
       display: flex;
       align-items: center;
-      padding: 8px 0;
+      padding: 10px 0;
       border-bottom: 1px solid #f0f0f0;
     }
-    .log img {
-      width: 28px;
-      height: 28px;
-      margin-right: 12px;
-    }
-    .log span {
-      font-size: 15px;
-      color: #555;
-    }
+    .log:last-child { border: none; }
+    .log span { font-size: 15px; color: #444; }
 
-    /* Modal */
+    /* ---- MODAL ---- */
     .modal {
       display: none;
       position: fixed;
@@ -105,23 +132,26 @@
       background: rgba(0,0,0,0.5);
       justify-content: center;
       align-items: center;
-      animation: fadeIn 0.3s;
     }
     .modal-content {
       background: #fff;
-      padding: 30px;
-      border-radius: 20px;
+      padding: 25px;
+      border-radius: 12px;
       width: 350px;
-      text-align: center;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.15);
-      animation: slideIn 0.4s;
+      box-shadow: 0 5px 20px rgba(0,0,0,0.2);
+    }
+    .modal-content h3 {
+      margin-bottom: 15px;
+      font-size: 18px;
+      font-weight: 600;
+      color: #003087;
     }
     .modal-content input, .modal-content textarea {
       width: 100%;
-      padding: 12px;
-      margin: 10px 0;
-      border: 1px solid #ddd;
-      border-radius: 12px;
+      padding: 10px;
+      margin: 8px 0;
+      border: 1px solid #ccc;
+      border-radius: 8px;
       font-size: 14px;
     }
     .close {
@@ -129,25 +159,67 @@
       cursor: pointer;
       font-size: 20px;
       color: #888;
-      transition: 0.2s;
     }
     .close:hover { color: #333; }
-
-    @keyframes fadeIn { from {opacity:0;} to {opacity:1;} }
-    @keyframes slideIn { from {transform: translateY(-30px); opacity:0;} to {transform: translateY(0); opacity:1;} }
   </style>
 </head>
 <body>
-  <div class="topbar">KenzoPay</div>
-  <div class="container">
-    <div class="balance">Solde: <span id="balance">0</span> µ</div>
-    <button class="btn" id="donateBtn">+ Donner de l'argent</button>
-
-    <h3>Notifications</h3>
-    <div class="logs" id="logs"></div>
+  <!-- HEADER -->
+  <div class="topbar">
+    <div>KenzoPay</div>
+    <nav>
+      <a href="#">Accueil</a>
+      <a href="#">Envoyer</a>
+      <a href="#">Portefeuille</a>
+      <a href="#">Activité</a>
+      <a href="#">Aide</a>
+    </nav>
   </div>
 
-  <!-- Modal -->
+  <!-- MAIN -->
+  <div class="container">
+    <!-- LEFT SIDE -->
+    <div>
+      <div class="card">
+        <div class="balance">Solde : <span id="balance">0</span> µ</div>
+        <button class="btn" id="donateBtn">+ Envoyer de l'argent</button>
+      </div>
+
+      <div class="card">
+        <h3>Actions rapides</h3>
+        <div class="actions">
+          <div class="action">
+            <h4>Envoyer</h4>
+          </div>
+          <div class="action">
+            <h4>Demander</h4>
+          </div>
+          <div class="action">
+            <h4>Virement</h4>
+          </div>
+        </div>
+      </div>
+
+      <div class="card">
+        <h3>Notifications</h3>
+        <div class="logs" id="logs"></div>
+      </div>
+    </div>
+
+    <!-- RIGHT SIDE -->
+    <div>
+      <div class="card">
+        <h3>Comptes & cartes</h3>
+        <p>Ajoutez vos cartes ou comptes bancaires pour sécuriser vos transactions.</p>
+      </div>
+      <div class="card">
+        <h3>Associations</h3>
+        <p>Soutenez les causes qui vous tiennent à cœur en un clic.</p>
+      </div>
+    </div>
+  </div>
+
+  <!-- MODAL -->
   <div class="modal" id="donateModal">
     <div class="modal-content">
       <span class="close" id="closeModal">&times;</span>
@@ -159,8 +231,8 @@
     </div>
   </div>
 
+  <!-- SCRIPT -->
   <script>
-    // ✅ Config Firebase
     const firebaseConfig = {
       apiKey: "AIzaSyDyWu4TI4PIRXfeb7yqt0WIGClgu10IjkM",
       authDomain: "kylita-f2923.firebaseapp.com",
@@ -203,35 +275,14 @@
       const logsDiv = document.getElementById("logs");
       const div = document.createElement("div");
       div.className = "log";
-
-      let icon = "";
-      if (msg.startsWith("[TRANSFERT]")) {
-        icon = "transfert.png";
-        msg = msg.replace("[TRANSFERT]", "");
-      } else if (msg.startsWith("[RECEPTION]")) {
-        icon = "recept.png";
-        msg = msg.replace("[RECEPTION]", "");
-      }
-
-      if (icon) {
-        const img = document.createElement("img");
-        img.src = icon;
-        div.appendChild(img);
-      }
-
-      const span = document.createElement("span");
-      span.textContent = msg;
-      div.appendChild(span);
-
+      div.innerHTML = `<span>${msg}</span>`;
       logsDiv.prepend(div);
     }
 
-    // Modal
     const modal = document.getElementById("donateModal");
     document.getElementById("donateBtn").onclick = () => modal.style.display = "flex";
     document.getElementById("closeModal").onclick = () => modal.style.display = "none";
 
-    // Envoyer argent
     document.getElementById("sendMoney").onclick = async () => {
       const destEmail = document.getElementById("destEmail").value.trim();
       const amount = parseInt(document.getElementById("amount").value);
@@ -251,10 +302,10 @@
       if (!destUid) return alert("Destinataire introuvable.");
 
       db.ref("users/" + currentUid + "/balance").set(balance - amount);
-      db.ref("users/" + currentUid + "/logs").push("[TRANSFERT] Vous avez effectué un virement de " + amount + "µ à " + destEmail);
+      db.ref("users/" + currentUid + "/logs").push("[TRANSFERT] Vous avez envoyé " + amount + "µ à " + destEmail);
 
       db.ref("users/" + destUid + "/balance").transaction(b => (b || 0) + amount);
-      db.ref("users/" + destUid + "/logs").push("[RECEPTION] Vous avez reçu " + amount + "µ de la part de " + currentUser.email);
+      db.ref("users/" + destUid + "/logs").push("[RECEPTION] Vous avez reçu " + amount + "µ de " + currentUser.email);
 
       modal.style.display = "none";
     };
